--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +10,7 @@
     <link rel="stylesheet" href="css/mobile.css">
     <title>iBlog - Heaven for bloggers</title>
 </head>
+
 <body>
     <nav class="navigation max-width-1 m-auto">
         <div class="nav-left">
@@ -17,16 +19,9 @@
             </a>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="blogpost.html">Blog</a></li>
+                <li><a href="About.html">Blog</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
-        </div>
-        <div class="nav-right">
-            <form action="search.html" method="get">
-                <input class="form-input" type="text" name="query" placeholder="Article Search">
-                <button class="btn">Search</button>
-            </form>
-
         </div>
 
     </nav>
@@ -57,13 +52,14 @@
         </div>
 
     </div>
- 
 
-   
+
+
 
     <div class="footer">
-        <p>Copyright &copy; iBlog.com |  All Rights Reserved</p>
-    
+        <p>Copyright &copy; iBlog.com | All Rights Reserved</p>
+
     </div>
 </body>
+
 </html>
