--- a/about.html
+++ b/about.html
@@ -173,22 +173,40 @@
 </div>
 </body>
 
-</html>             <a href="/blogpost.html">
-                        <h3>Learn more about Machine Learning techniques in India by joining this channel</h3>
-                    </a>
+</html> <a href="/blogpost.html">
+    <h3>Learn more about Machine Learning techniques in India by joining this channel</h3>
+</a>
 
-                    <div>Author Name</div>
-                    <span>07 January | 6 min read</span>
-                </div>
-            </div>
+<div>Author Name</div>
+<span>07 January | 6 min read</span>
+</div>
+</div>
 
-        </div>
-    </div>
+</div>
+</div>
 
-    <div class="footer">
-        <p>Copyright &copy; iBlog.com | All Rights Reserved</p>
+<div class="footer">
+    <p>Copyright &copy; iBlog.com | All Rights Reserved</p>
 
-    </div>
+</div>
+</body>
+
+</html> <a href="/blogpost.html">
+    <h3>Learn more about Machine Learning techniques in India by joining this channel</h3>
+</a>
+
+<div>Author Name</div>
+<span>07 January | 6 min read</span>
+</div>
+</div>
+
+</div>
+</div>
+
+<div class="footer">
+    <p>Copyright &copy; iBlog.com | All Rights Reserved</p>
+
+</div>
 </body>
 
 </html>
