--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <p>A website from me to have some information for myself.</p>
         </div>
         <div class="content-right">
-            <img src="img/home.svg" alt="iBlog">
+            <img src="img/home.svg" alt="image">
         </div>
     </div>
 
@@ -44,14 +44,6 @@
     <div class="home-articles max-width-1 m-auto font2">
         <h2>Featured Articles</h2>
         <div class="home-article">
-            <div class="home-article-img">
-                <img src="img/3.png" alt="article">
-            </div>
-            <div class="home-article-content font1">
-                <a href="/blogpost.html">
-                    <h3>Welcome to Jordan's Blog</h3>
-                </a>
-            </div>
         </div>
     </div>
 </body>
