--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/utils.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/mobile.css">
-    <title>iBlog - Heaven for bloggers</title>
+    <title>Jordan Tang's Blog</title>
 </head>
 
 <body>
@@ -18,6 +18,7 @@
             </a>
             <ul>
                 <li><a href="index.html">Home</a></li>
+                <li><a href="resume.html">Resume</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
