--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/contact.css">
     <link rel="stylesheet" href="css/mobile.css">
-    <title>iBlog - Heaven for bloggers</title>
+    <title>Jordan Tang's Blog</title>
 </head>
 
 <body>
