--- a/resume.html
+++ b/resume.html
@@ -6,14 +6,13 @@
     <meta name="resume" content="Resume Pages">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Jordan Tang's Resume</title>
-    <link rel="stylesheet" href="css/resume.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-
     <section class="container">
         <div class="left">
-            <p>Jordan Tang</p>
+            <h1>Jordan Tang</h1>
         </div>
         <div class="right">
             <p>
@@ -26,7 +25,7 @@
     <hr>
     <section class="container">
         <div class="left">
-            <p>About</p>
+            <h2>About</h2>
         </div>
         <div>
             <p>
@@ -39,7 +38,7 @@
     <hr>
     <section class="container">
         <div class="left">
-            <p>Education</p>
+            <h2>Education</h2>
         </div>
         <div class="right">
             <p>
@@ -61,10 +60,10 @@
     <hr>
     <section class="container">
         <div class="left">
-            <p>Skills</p>
+            <h2>Skills</h2>
         </div>
         <div class="right">
-            <ul id=skills>
+            <ul>
                 <li>HTML</li>
                 <li>CSS</li>
                 <li>Java</li>
@@ -78,7 +77,7 @@
     <hr>
     <section class="container">
         <div class="left">
-            <p>Community Integration</p>
+            <h2>Community Integration</h2>
         </div>
         <div class="right">
             <p>
@@ -105,12 +104,7 @@
     </section>
     <hr>
     <section class="container">
-        <section class="container">
-            <div class="left">
-                <a href="index.html">Back to the main page</a>
-            </div>
-        </section>
-        <div class="right">
+        <div class="left">
             <button class="print" onclick="window.print()">Print My Resume</button>
         </div>
     </section>
