--- a/resume.html
+++ b/resume.html
@@ -6,10 +6,11 @@
     <meta name="resume" content="Resume Pages">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Jordan Tang's Resume</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/resume.css">
 </head>
 
 <body>
+
     <section class="container">
         <div class="left">
             <h1>Jordan Tang</h1>
@@ -60,10 +61,10 @@
     <hr>
     <section class="container">
         <div class="left">
-            <h2>Skills</h2>
+            h2>Skills</h2>
         </div>
         <div class="right">
-            <ul>
+            <ul id=skills>
                 <li>HTML</li>
                 <li>CSS</li>
                 <li>Java</li>
@@ -77,7 +78,7 @@
     <hr>
     <section class="container">
         <div class="left">
-            <h2>Community Integration</h2>
+            <p>Community Integration</p>
         </div>
         <div class="right">
             <p>
@@ -104,7 +105,12 @@
     </section>
     <hr>
     <section class="container">
-        <div class="left">
+        <section class="container">
+            <div class="left">
+                <a href="index.html">Back to the main page</a>
+            </div>
+        </section>
+        <div class="right">
             <button class="print" onclick="window.print()">Print My Resume</button>
         </div>
     </section>
