--- a/resume.html
+++ b/resume.html
@@ -61,7 +61,7 @@
     <hr>
     <section class="container">
         <div class="left">
-            h2>Skills</h2>
+            <h2>Skills</h2>
         </div>
         <div class="right">
             <ul id=skills>
