--- a/resume.html
+++ b/resume.html
@@ -6,7 +6,7 @@
     <meta name="resume" content="Resume Pages">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Jordan Tang's Resume</title>
-    <link rel="stylesheet" href="resume.css">
+    <link rel="stylesheet" href="css/resume.css">
 </head>
 
 <body>
