--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
     <nav class="navigation max-width-1 m-auto">
         <div class="nav-left">
             <a href="index.html">
-                <span><img src="img/logo.png" width="95px" alt="loading..."></span>
+                <span><img src="img/logo.png" alt="loading..."></span>
             </a>
             <ul>
                 <li><a href="index.html">Home</a></li>
