--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav class="navigation max-width-1 m-auto">
         <div class="nav-left">
             <a href="index.html">
-                `
+                <span><img src="img/logo.png" alt="loading..."></span>
             </a>
             <ul>
                 <li><a href="index.html">Home</a></li>
